# ECE1724-Large-Language-Model-Inference-Service

./: .gitignore  README.md
llm_inference_service/: Cargo.toml
llm_inference_service/backend/: Cargo.toml  config.toml
llm_inference_service/backend/archive/: model.rs
llm_inference_service/backend/src/: config.rs  infer.rs  main.rs  model.rs  simple_infer.rs  template.rs
llm_inference_service/frontend/: Cargo.toml  app.js  index.html  style.css
llm_inference_service/frontend/src/: main.rs
llm_inference_service/server/: Cargo.toml  body.json  models.json
llm_inference_service/server/src/: api.rs  c.txt  config.rs  inference.rs  main.rs  model_manager.rs
