[package]
name = "llm-chat-frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
leptos = { version = "0.6", features = ["csr"] }
gloo-net = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["HtmlElement", "Element", "ReadableStream", "AbortController", "AbortSignal"] }
wasm-streams = "0.4"
console_error_panic_hook = "0.1"

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true